<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeckOfCardsPlus</string>
    <string name="action_settings">Settings</string>
    <string name="table_top">Table</string>
    <string name="card_number">A</string>
    <string name="card_naipe">Naipe</string>
    <string name="new_deck">NEW DECK</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="settings">DECK SETTINGS</string>
    <string name="filler">filler</string>

</resources>