<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/table_top"
        android:scaleType="fitXY"
        android:src="@drawable/tabletop2" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/card_naipe"
        android:scaleType="centerInside"
        android:src="@drawable/watermark" />

    <ImageView
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/cardshadow"
        android:contentDescription="@string/table_top" />

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/card" >

        <!-- Top Left Corner -->

        <LinearLayout
            android:id="@+id/topcorner"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:id="@+id/cardnumberl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/card_number"
                android:textColor="@android:color/black"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/cardnaipel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/card_naipe"
                android:scaleType="fitStart"
                android:src="@drawable/heart" />
        </LinearLayout>

        <!-- Bottom Right Corner -->

        <LinearLayout
            android:id="@+id/bottomcorner"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:padding="15dp"
            android:rotation="180" >

            <TextView
                android:id="@+id/cardnumberr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="@string/card_number"
                android:textColor="@android:color/black"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/cardnaiper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/card_naipe"
                android:scaleType="fitStart"
                android:src="@drawable/heart" />
        </LinearLayout>

        <!-- Center -->

        <ImageView
            android:id="@+id/cardnaipec"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_naipe"
            android:scaleType="centerInside"
            android:src="@drawable/heart" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingRight="150dp"
        android:weightSum="12" >

        <TextView
            android:id="@+id/new_deck"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#99000000"
            android:gravity="left|center"
            android:paddingLeft="60dp"
            android:text="@string/new_deck"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:contentDescription="@string/filler" />

        <TextView
            android:id="@+id/shuffle"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#99000000"
            android:gravity="left|center"
            android:paddingLeft="60dp"
            android:text="@string/shuffle"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:contentDescription="@string/filler" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:background="#99000000"
            android:gravity="left|center"
            android:paddingLeft="60dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>